force-app/main/default/objects/PaperformSettings__c/PaperformSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the API Key and the form id</description>
    <label>Paperform Settings</label>
</CustomObject>