force-app/main/default/objects/PaperformSettings__c/fields/ApiKey__c.field-meta.xml
<CustomField>
    <fullName>ApiKey__c</fullName>
    <description>Paperform ApiKey</description>
    <inlineHelpText>Enter your Paperform APIKey</inlineHelpText>
    <label>API Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>