force-app/main/default/objects/PaperformSettings__c/fields/ApiKeyPart1__c.field-meta.xml
<CustomField>
    <fullName>ApiKeyPart1__c</fullName>
    <label>ApiKeyPart1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>