force-app/main/default/objects/PaperformSettings__c/fields/ApiKeyPart2__c.field-meta.xml
<CustomField>
    <fullName>ApiKeyPart2__c</fullName>
    <label>ApiKeyPart2</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>