force-app/main/default/objects/PaperformSettings__c/fields/ApiKeyPart3__c.field-meta.xml
<CustomField>
    <fullName>ApiKeyPart3__c</fullName>
    <label>ApiKeyPart3</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>