force-app/main/default/objects/PaperformSettings__c/fields/SelectedFormID__c.field-meta.xml
<CustomField>
    <fullName>SelectedFormID__c</fullName>
    <description>Saves a form id from Paperform&apos;s api</description>
    <label>Selected Form ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>